--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Copyright &copy; {{ page.date | date: "%Y" }} Kevin O'Sullivan. All rights reserved.</p>
+        <p class="copyright">Copyright &copy; {{ 'now' | date: "%Y" }} Kevin O'Sullivan. All rights reserved.</p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
