--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <h1 id="project_title"><a href="{{ site.github.url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+          <h1 id="project_title"><a href="{{ site.github.url }}/pages">{{ site.title | default: site.github.repository_name }}</a></h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
         </header>
     </div>
@@ -31,7 +31,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Copyright &copy; {{ 'now' | date: "%Y" }} Kevin O'Sullivan. All rights reserved.</p>
+        <p class="copyright">Copyright &copy; 2021-{{ 'now' | date: "%Y" }} Kevin O'Sullivan. All rights reserved.</p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
